# make-cpp-library

./: .gitignore  README.md  main
Example/linux-x64/: CMakeLists.txt  README.md  main.cpp
Example/osx-x86_64/: CMakeLists.txt  README.md  main.cpp
Example/osx-x86_64/mylib-osx-x86_64/include/: mylib.h
Example/win-x64/: CMakeLists.txt  README.md
Example/win-x64-mingw/: CMakeLists.txt  README.md
Example/win-x64-msvc/: CMakeLists.txt  README.md
mylib-library/: CMakeLists.txt
mylib-library/lib/: CMakeLists.txt  mylib.cpp
mylib-library/lib/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  mylib-checkpoint.cpp  mylib-checkpoint.h
mylib-test/: CMakeLists.txt
release/mylib-osx-x86_64/lib/: libmylib.dylib
release/mylib-win-x64-msvc/lib/: mylib.lib
